syntax = "proto3";

package auth;

option go_package = "./auth-service/gRPC/service";

service AuthService{
    rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse);
}

message VerifyTokenRequest{
    string token = 1;
}

message VerifyTokenResponse{
    string email = 1;
    string user_type = 2;
    string uid = 3;
}


