syntax = "proto3";

package order;

option go_package = "./module/gRPC-order/service";

service OrderServcie {
    rpc CreateOrder (OrderRequest) returns (OrderResponse);
    rpc GetOrder (GetOrderRequest) returns (OrderResponse);
}

message OrderRequest {
    string user_id = 1;
    repeated OrderItem items = 2;
    float total_price = 3;
}

message OrderItem {
    string product_id = 1;
    int32 quantity = 2;
    float price = 3;
}

message GetOrderRequest {
    string order_id = 1;
}

message OrderResponse {
    string order_id = 1;
    string status = 2;
    float total_price = 3;
    repeated OrderItem items = 4;
}